--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,16 @@ box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
 	margin-left: auto;
 	margin-right: auto;
 }
+
+#loading {
+    display: none;
+
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+    z-index:9999;
+}
