--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Cooper-Hewitt";
-    src: url(fonts/CooperHewitt-book.otf);
+    src: url(../music-emotions-survey/fonts/CooperHewitt-book.otf);
 }
 
 #survey {
