--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffdaaa', end
 box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
 }
 
+#progress-bar {
+	display: table-row;
+	margin-top: 2%;
+}
 #survey-content {
-	display: table-cell;
+	display: table-row;
 	vertical-align: middle;
 }
 
